images, sounds, html, js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Game</title>
 </head>
 <body>
+    <audio id="soundEfx" src="sounds/neigh.wav" style="display: none;"></audio>
+    <audio id="soundEfx" src="sounds/gameover.wav" style="display: none;"></audio>
+    <audio id="soundEfx" src="sounds/lost.wav" style="display: none;"></audio>
     <script src="app.js"></script>
 </body>
 </html>
