Made some design edits to the page.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Horse Wrangling Sim</title>
+    <link rel="stylesheet" href="images/style.css">
 </head>
 <body>
+    <h1>Horse Wrangling Simulator</h1>
     <audio id="soundEfx" src="sounds/neigh.wav" style="display: none;"></audio>
     <audio id="soundEfx" src="sounds/gameover.wav" style="display: none;"></audio>
     <audio id="soundEfx" src="sounds/lost.wav" style="display: none;"></audio>
+    <div id="canvas-holder"></div>
     <script src="app.js"></script>
 </body>
 </html>
